--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <button class="btn">Dark</button>
   </div>
   <script src="app.js"></script>
-  <script>alert("Hello World")</script>
+  <script>alert("Clica no botão para mudar o tema")</script>
   <noscript>You need to enable JavaScript to view the full site.</noscript>
 </body>
 </html>
